# hyoacloud-aws-infrastructure

./: Makefile  README.md  pyproject.toml
.scripts/: deploy-core.sh  destroy-core.sh
cli/: __init__.py  settings.py
cli/commands/: deploy_core.py  deploy_project.py  deploy_space.py  destroy_core.py  destroy_project.py  destroy_space.py
core/: 000-iam-policies.yaml  001-iam-groups.yaml  metadata.json
core/000-iam-policies/: 002-monitoring-services-discovery.yaml  003-infrastructure-services-discovery.yaml  004-network-services-discovery.yaml  005-compute-services-discovery.yaml  006-data-services-discovery.yaml
core/002-container-registry/: 000-serverless-office-hours-instance-scheduler.yaml
core/002-iam-roles/: 000-federated-role-github-actions.yaml
core/003-container-registry/: 000-serverless-office-hours-instance-scheduler.yaml
core/identity/: access-unit-administrator.yaml  access-unit-user.yaml  administrator-access-unit.yaml  federated-role-github-actions.yaml  management-policy-self-identity.yaml  oidc-provider-github.yaml  user-group-user.yaml  user-self-management-policies.yaml
core/infrastructure/: ecr-repository-serverless-office-hours-instance-scheduler.yaml
global/infrastructure/: 00-test.yaml  000-iam-policies.yaml  001-iam-roles.yaml  002-iam-groups.yaml  003-network-base.yaml  004-network-connectivity.yaml
old/scripts/: deploy-core.sh  deploy-space.sh  (+1 more)
scripts/: deploy-core.sh  deploy-global.sh  deploy-project.sh  deploy-space.sh  destroy-core.sh  destroy-global.sh  destroy-project.sh  destroy-space.sh
spaces/: metadata.json
(+97 files in other folders)
