[project]
name = "hyoacloud-aws-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[tool.setuptools]
packages = ["cli"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[project.scripts]
stack = "cli:run"
